# vje

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: ci.yml
assets/sample-files/: tree-smoke.json
cmake/: Dependencies.cmake
src/vje_app/: AppConfig.hpp  CMakeLists.txt  MainWindow.cpp  MainWindow.hpp  main.cpp
src/vje_app/models/: IGridProjection.hpp  JsonFormModel.cpp  JsonFormModel.hpp  JsonTableModel.cpp  JsonTableModel.hpp  JsonTreeModel.cpp  JsonTreeModel.hpp  cell_presentation.cpp  cell_presentation.hpp
src/vje_app/services/: IconLibrary.cpp  IconLibrary.hpp  SelectionService.cpp  SelectionService.hpp  SettingsStore.cpp  SettingsStore.hpp  StatusService.cpp  StatusService.hpp  ThemeService.cpp  ThemeService.hpp  settings_profiles.cpp  settings_profiles.hpp
src/vje_app/style/: CodeTokenPalette.cpp  CodeTokenPalette.hpp  FluentStyle.cpp  FluentStyle.hpp  FocusHighlight.cpp  FocusHighlight.hpp  fixed_font.cpp  fixed_font.hpp  tab_surface.cpp  tab_surface.hpp  tone.cpp  tone.hpp
src/vje_app/tests/: CMakeLists.txt  tst_code_indentation.cpp  tst_code_view.cpp  tst_editor_pane.cpp  tst_fluent_style.cpp  tst_focus_highlight.cpp  tst_form_view.cpp  tst_grid_navigation.cpp  tst_icon_library.cpp  tst_json_cell_delegate.cpp  tst_json_form_model.cpp  tst_json_highlighter.cpp  tst_json_table_model.cpp  tst_json_text_index.cpp  tst_json_tree_model.cpp  tst_pane_cycler.cpp  tst_settings_store.cpp  tst_tab_surface.cpp  tst_text_view.cpp  tst_tree_view_pane.cpp  tst_workspace_splitter.cpp
src/vje_app/views/: CodeEditor.cpp  CodeEditor.hpp  CodeView.cpp  CodeView.hpp  EditorPane.cpp  EditorPane.hpp  FormGridController.cpp  FormGridController.hpp  FormView.cpp  FormView.hpp  IEditorView.hpp  JsonCellDelegate.cpp  JsonCellDelegate.hpp  JsonHighlighter.cpp  JsonHighlighter.hpp  JsonKeyValidator.cpp  JsonKeyValidator.hpp  JsonNumberValidator.cpp  JsonNumberValidator.hpp  NodeContextActions.cpp  NodeContextActions.hpp  PaneCycler.cpp  PaneCycler.hpp  PaneHeader.cpp  PaneHeader.hpp  ShadedTabBar.cpp  ShadedTabBar.hpp  TextView.cpp  TextView.hpp  TreeViewPane.cpp  TreeViewPane.hpp  WorkspaceSplitter.cpp  WorkspaceSplitter.hpp  code_indentation.cpp  code_indentation.hpp  grid_navigation.cpp  grid_navigation.hpp  json_text_index.cpp  json_text_index.hpp  node_presentation.cpp  (+1 more)
src/vje_core/: CMakeLists.txt  version.cpp  version.hpp
src/vje_core/convert/: CsvCodec.cpp  CsvCodec.hpp  XmlExporter.cpp  XmlExporter.hpp  XmlImporter.cpp  XmlImporter.hpp  YamlCodec.cpp  YamlCodec.hpp
src/vje_core/document/: JsonDocument.cpp  JsonDocument.hpp  JsonNode.cpp  JsonNode.hpp  JsonPointer.cpp  JsonPointer.hpp
src/vje_core/editing/: EditCommands.cpp  EditCommands.hpp  UndoController.cpp  UndoController.hpp  edit_transforms.cpp  edit_transforms.hpp
src/vje_core/services/: CellPasteConverter.cpp  CellPasteConverter.hpp  DocumentIo.cpp  DocumentIo.hpp  JsonFormatter.cpp  JsonFormatter.hpp  JsonLexer.cpp  JsonLexer.hpp  JsonParser.cpp  JsonParser.hpp  JsonSerializer.cpp  JsonSerializer.hpp  JsonShapeComparer.cpp  JsonShapeComparer.hpp  SearchService.cpp  SearchService.hpp  TextViewRenderer.cpp  TextViewRenderer.hpp  Validator.cpp  Validator.hpp
src/vje_core/tests/: CMakeLists.txt  tst_cell_paste_converter.cpp  tst_csv_codec.cpp  tst_document_io.cpp  tst_edit_commands.cpp  tst_edit_transforms.cpp  tst_json_document.cpp  tst_json_formatter.cpp  tst_json_lexer.cpp  tst_json_node.cpp  tst_json_parser.cpp  tst_json_pointer.cpp  tst_json_serializer.cpp  tst_search_service.cpp  tst_shape_comparer.cpp  tst_text_view_renderer.cpp  tst_undo_controller.cpp  tst_validator.cpp  tst_version.cpp  tst_xml_exporter.cpp  tst_xml_importer.cpp  tst_yaml_codec.cpp
